--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'Bebas Neue Cyrillic';
+  src: local('Bebas Neue Cyrillic'), local('BebasNeueCyrillic'),
+    url('/assets/fonts/BebasNeueCyrillic.woff2') format('woff2'),
+    url('/assets/fonts/BebasNeueCyrillic.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 *{
   box-sizing: border-box;/* все как у всех, ляпота*/
 }
@@ -55,10 +64,55 @@ body{
   padding-top: 54px;
   display: flex;
 }
+.main-info{
+  flex-grow: 1;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: space-between;
+}
 .home-image path{
   opacity: 0;
   cursor: pointer;
 }
 .home-image path:hover{
   opacity: 1;
+}
+.counter-group{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+.counter-button{
+  cursor: pointer;
+  background-color: #fff;
+  border: none;
+
+}
+.count-arrow-down {
+  transform: rotateX(180deg);
+}
+.main-title{
+  margin: 0;
+  font-family: 'Bebas Neue Cyrillic', sans-serif;
+  font-weight: normal;
+  font-size: 37px;
+  line-height: 37px;
+  color: #635854;
+}
+.counter{
+  color: #635854;
+  font-size: 124px;
+  font-family: 'Bebas Neue Cyrillic',  sans-serif;
+  margin-top: 10px;
+}
+.button-primary{
+  background: #3596F5;
+  border-radius: 6px;
+  color:white;
+  border:none;
+  padding: 16px 36px;
+  cursor: pointer;
 }
