--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,27 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'Bebas Neue';
+  src: local('Bebas Neue Regular Regular'), local('BebasNeueRegular'),
+    url('/assets/fonts/BebasNeueRegular.woff2') format('woff2'),
+    url('/assets/fonts/BebasNeueRegular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Bebas Neue';
+  src: local('Bebas Neue Light Regular'), local('BebasNeueLight'),
+    url('/assets/fonts/BebasNeueLight.woff2') format('woff2'),
+    url('/assets/fonts/BebasNeueLight.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
 *{
   box-sizing: border-box;/* все как у всех, ляпота*/
 }
