--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,13 @@
 @font-face {
+  font-family: 'Bebas Neue Book';
+  src: local('Bebas Neue Book Regular'), local('BebasNeueBook'),
+    url('/assets/fonts/BebasNeueBook.woff2') format('woff2'),
+    url('/assets/fonts/BebasNeueBook.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
   font-family: 'Bebas Neue Cyrillic';
   src: local('Bebas Neue Cyrillic'), local('BebasNeueCyrillic'),
     url('/assets/fonts/BebasNeueCyrillic.woff2') format('woff2'),
@@ -126,7 +135,8 @@ body{
 .counter{
   color: #635854;
   font-size: 124px;
-  font-family: 'Bebas Neue Cyrillic',  sans-serif;
+  font-family: 'Bebas Neue Book',sa;
+  /*font-family: 'Bebas Neue Cyrillic',  sans-serif;*/
   margin-top: 10px;
 }
 .button-primary{
