--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@ body{
   display: flex;
   flex-direction: column;
   align-items:center;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .home-image path{
   opacity: 0;
