--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,4 +198,73 @@ path.current-floor {
 }
 .modal{
   position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal-dialog{
+  position: relative;
+  max-width: 1000px;
+  min-height: 565px;
+  background-color: #fff;
+  flex-grow: 1;
+  display: flex;
+}
+.modal-image{
+  background-color: #EBEBEB;
+  width: 60%;
+  text-align: center;
+  padding: 50px;
+}
+.modal-title{
+  font-family: 'Bebas Neue Book',  sans-serif;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 29px;
+  margin-top: 0;
+  margin-bottom: 25px;
+}
+.modal-info{
+  width: 40%;
+  padding: 50px 46px;
+  /*text-align: center;*/
+}
+.flat-list{
+  padding: 0;
+  list-style: none;
+  margin-top: 55px;
+}
+.flat-item{
+  margin-bottom: 10px;
+}
+.flat-link{
+  font-size: 16px;
+  line-height: 19px;
+  color: #635854;
+  text-decoration: none;
+}
+.flat-link:hover{
+  text-decoration-line: underline;
+  color: #3596F5;
+}
+.modal-alert{
+  padding-top: 56px;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: #635854;
+}
+.modal-close-button{
+  position: absolute;
+  right: 0;
+  top: 0;
+  border:none;
+  background-color:#fff;
+
 }
